small change, swagger

--- a/back-end/src/views/partials/header.hbs
+++ b/back-end/src/views/partials/header.hbs
@@ -13,6 +13,9 @@
       <li class="nav-item {{#if (eq activePage 'genre')}} active{{/if}}">
         <a class="nav-link" href="genre">Manage Book Genre</a>
       </li>
+      <li class="nav-item {{#if (eq activePage 'borrow')}} active{{/if}}">
+        <a class="nav-link" href="borrow">Manage Borrow Request</a>
+      </li>
       {{!-- <li class="nav-item {{#if (eq activePage 'faculty')}} active{{/if}}">
         <a class="nav-link" href="/admin/faculty/view">Manage Faculty</a>
       </li>
